# batlert

./: Cargo.toml  README.md  flake.nix  shell.nix
nix/: package.nix
src/: cli.rs  log.rs  main.rs  popup.rs
