[package]
name = "batlert"
version = "1.0.0"
edition = "2021"
authors = ["Atle Skaanes Ahrenfeldt <atle.skaanes@gmail.com>"]
description = "A small CLI for quickly viewing the ASCII table in your terminal"
repository = "https://github.com/AtleSkaanes/batlert"
keywords = ["laptop", "battery", "alert"]
categories = ["gui"]
license = "MIT"


[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
gtk = "0.18.1"
gtk4 = {version="0.9.2", features = ["v4_10"]}
gtk4-layer-shell = "0.4.0"
rodio = "0.20.1"
